fixed the z-index

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@
   padding: 5px 15px;
   color: white;
   position: fixed;
-  width: 100%
+  width: 100%;
+  z-index:999;
 }
 
 .star{
